refactored huge resolver to share responsibilities & small project restructuring